--- a/css/styles.css
+++ b/css/styles.css
@@ -37,11 +37,6 @@ body {
 {
   list-style: none;
 }
-.link:hover,
-.link:focus
-{
-  color: var(--accent-color);
-}
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -52,6 +47,9 @@ body {
 
   white-space: nowrap;
   overflow: hidden;
+}
+.btn{
+  cursor: pointer;
 }
 /* ###############--Header--###############*/
 .header-list-link {
@@ -70,6 +68,13 @@ body {
   letter-spacing: 0.02em;
   color:var(--secondary-text-color);
 }
+.header-list-link:hover,
+.header-list-link:focus,
+.header-contact-link:hover,
+.header-contact-link:focus
+{
+  color: var(--accent-color);
+}
 /* ###############--Hero--###############*/
 .hero-title
 {
@@ -79,7 +84,7 @@ body {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   text-align: center;
-  color:var(--btn-text-color);
+  color:#ffffff;
 }
 .hero-btn
 {
@@ -89,6 +94,7 @@ body {
   line-height: 1.88;
   letter-spacing: 0.06em;
   color: var(--btn-text-color);
+  background-color: var(--accent-color);
 }
 /* ###############--Particular--###############*/
 
@@ -132,4 +138,8 @@ body {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
+}
+.footer-logo
+{
+  color:#ffffff;
 }
