--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,9 @@ body {
   letter-spacing: 0.02em;
   color: var(--main-text-color);
 }
-
+.active {
+  color: var(--accent-color);
+}
 .header-contact-link
 {
   font-weight: 500;
@@ -142,4 +144,34 @@ body {
 .footer-logo
 {
   color:#ffffff;
+}
+/* ###############--Project--###############*/
+
+.project-btn {
+  
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
+    letter-spacing: 0.03em;
+    color:var(--main-text-color);
+    background-color: #F5F4FA;
+}
+.project-btn:hover,
+.project-btn:focus
+{
+  color: var(--btn-text-color);
+  background-color: var(--accent-color);
+}
+.project-subtitle {
+  font-size: 18px;
+    line-height: 2x;
+    letter-spacing: 0.06em;
+    color:var(--main-text-color);
+}
+
+.project-text {
+  font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.03em;
+    color: var(--secondary-text-color);
 }
