--- a/css/styles.css
+++ b/css/styles.css
@@ -173,7 +173,7 @@ body {
 }
 .project-subtitle {
   font-size: 18px;
-    line-height: 2x;
+    line-height: 2;
     letter-spacing: 0.06em;
     color:var(--main-text-color);
 }
